--- a/styles/_score.scss
+++ b/styles/_score.scss
@@ -1,18 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Pirata+One&family=The+Nautigal:wght@700&display=swap');
+@include mobileS{
 .containerscore{
-    max-width: 80%;
+    object-fit: contain;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 5%;
 }
+
 .tscore{
+    object-fit: contain;
+    width: 60%;
     text-align: center;
-    border: 2px solid white;
-    padding: 5%;
+    //border: 2px solid rgb(0, 0, 0);
+    padding: 1%;
+    border-radius: 10px;
+    font-family: 'Dancing Script', cursive;
+
 }
 .tdhead{
+    object-fit: contain;
     font-weight: bold;
+    font-size: 80%;
     border: 2px solid goldenrod;
-    background-color: rgba(255, 255, 255, 0.508);
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 2%;
+    border-radius: 10px;
+    
 }
 .rowscore{
     padding:2%;
+    font-size: 80%;
     border: 2px solid goldenrod;
-    background-color: rgba(255, 255, 255, 0.508);
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
+    
+}
+}
+
+@include tablet{
+    .tdhead,.rowscore{
+    font-size: 160%; 
+    }
 }
