--- a/styles/_table.scss
+++ b/styles/_table.scss
@@ -1,30 +1,57 @@
-@include mobileS{
-    .map{
-        max-width: 80%;
-        max-height: 80%;
-    }
-    .x{
-        max-width: 80%;
-        max-height: 80%;
-    }
-    .backmap{
-        padding: auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        
-        width: 100%;
-        height: 100%;
-        
-    }
+@include mobileS {
+  .backmap {
+      
+    object-fit: contain;
+    max-width: 100vmax;
+    padding: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .boardboxes {
+    object-fit: contain;
+    max-width:100%;
+    border: 0px;
+  }
+
+  .map {
+    object-fit: contain;
+    max-width: 80%;
+    filter: drop-shadow(0px 0px 5px black)
+            drop-shadow(0px 0px 10px black);
+  }
+  .treasure {
+    object-fit: contain;
+    max-width: 80%;
+    filter: drop-shadow(0px 0px 5px goldenrod)
+            drop-shadow(0px 0px 10px goldenrod)
+            drop-shadow(0px 0px 15px goldenrod);
+  }
+  .skull {
+    object-fit: contain;
+    max-width: 80%;
+    filter: drop-shadow(0px 0px 5px rgb(162, 0, 0))
+            drop-shadow(0px 0px 10px rgb(162, 0, 0))
+            drop-shadow(0px 0px 15px rgb(162, 0, 0));
+  }
+  .h1att{
+    font-size: 110%;
+    font-family: 'Pirata One', cursive;
+    color:goldenrod;
+    background-color: rgba(0, 0, 0, 0.755);
+    padding-right: 3%;
+    padding-left: 3%;
+    border-radius: 10px;
+  }
 }
 
-@include tablet{    
-    .x{
-        width: 100px;
-        height: 100px;
-    }
-    .map{
-        max-width: 100%;
-    }
+@include tablet{
+  .h1att{
+    font-size: 200%;
+  }
+
+  .treasure, .skull, .map{
+    max-width: 100%;
+  }
 }
